# structuralPatterns

./: README.md
Adapter/: CMakeLists.txt  Main.cpp
Adapter/Adapter/: Adapter.h
Adapter/AdapterConcrets/: Game16BitAdapter.h  Game8BitAdapter.h
Adapter/Controller/: ModernController.h
Adapter/Games/: Game16Bit.h  Game8Bit.h
Bridge/: Bebe.cpp  Bebe.hpp  BichinhoVirtual.cpp  BichinhoVirtual.hpp  Dragao.cpp  Dragao.hpp  Especie.hpp  FaseEvolucao.hpp  Main.cpp
Composite/: Client.hpp  Component.hpp  Composite.hpp  Leaf.hpp  main.cpp
Decorator/: DECORATOR.md  Decorator.dev  Decorator.layout  Makefile.win  main.cpp
Decorator/include/: BaseNotifier.hpp  EmailNotifier.hpp  INotifier.hpp  MobileAppNotifier.hpp  SMSNotifier.hpp
Decorator/src/: BaseNotifier.cpp  EmailNotifier.cpp  MobileAppNotifier.cpp  SMSNotifier.cpp
Facade/: CMakeLists.txt  main.cpp
Facade/AutomatedSystem/: AutomatedSystem.cpp  AutomatedSystem.h
Facade/Pattern/: Facade.h
Facade/Subsystems/: Computer.h  EntertainmentSystem.h  Lights.h  SecuritySystem.h  Thermostat.h
Flyweight/: README.md  main.cpp
Flyweight/flyweight/: Forma.hpp  FormaFactory.hpp
Flyweight/flyweight/impl/: Circulo.hpp
Proxy/: README.md  main.cpp
Proxy/proxy/: Banco.h
Proxy/proxy/impl/: BancoProxy.cpp  BancoProxy.h  ContaBancariaReal.cpp  ContaBancariaReal.h
